@@ -1,3 +1,9 @@
+2011-09-27  Kai Tietz  <ktietz@redhat.com>
+
+	* coffcode.h (sec_to_styp_flags): Handle
+	SEC_LINK_DUPLICATES_SAME_CONTENTS, and
+	SEC_LINK_DUPLICATES_SAME_SIZE.
+
 2011-09-22  Tristan Gingold  <gingold@adacore.com>
 
 	* configure.in: Bump version to 2.22.51
